--- a/views/_header.erb
+++ b/views/_header.erb
@@ -9,6 +9,6 @@
 <body>
   <%= erb :_settings %>
   <span id="window-size"></span>
-  <div class="toolbar">
-      <h1><a id="logo" href="/<%= params[:key] %>" title=""><img src="/images/logo.png" alt="HatchPass"/></a></h1>
+  <div id="header">
+      <h1><a id="logo" href="/<%= params[:key] %>" title="">Hatchpass</a></h1>
   </div>
