set default settings in form

--- a/views/_settings.erb
+++ b/views/_settings.erb
@@ -9,15 +9,20 @@
   	
   	<h2>Algorithm</h2>
   	<ul class="rounded">
-  	  <li><label for="default">Default</label><input type="radio" name="alt" value="" id="default" ></li>
-  	  <li><label for="legacy">Legacy</label><input type="radio" name="alt" value="" id="legacy" ></li>
+  	  <li>
+  	    <label for="algorithm">Algorithm</label>
+  	    <select name="algorithm" id="algorithm">
+  	      <option value="default">Default</option>
+  	      <option value="legacy">Legacy</option>
+  	    </select>
+  	  </li>
   	</ul>
   	
   	<h2>Remember</h2>
   	<ul class="rounded last">
-  	  <li><label for="r_master">Remember master</label> <span class="toggle"><input id="r_master" type="checkbox" checked/></span></li>
+  	  <li><label for="r_master">Remember master</label> <span class="toggle"><input id="r_master" type="checkbox"/></span></li>
   	  <li><label for="r_settings">Remember settings</label> <span class="toggle"><input id="r_settings" type="checkbox" /></span></li>
-  	  <li><label for="r_url">Remember URL</label> <span class="toggle"><input id="r_url" type="checkbox" checked/></span></li>
+  	  <li><label for="r_url">Remember URL</label> <span class="toggle"><input id="r_url" type="checkbox"/></span></li>
   	</ul>
   	
   	<div class="info">
