--- a/views/stylesheets/_core.scss
+++ b/views/stylesheets/_core.scss
@@ -36,9 +36,11 @@ a {
   bottom: 0;
   padding: 10px 0;
   width: 100%;
+  z-index: 6;
   @include linear-gradient(color-stops(#ddd, #aaa));
   @include box-shadow(#aaa, 0, -2px, 5px);
   text-shadow: 0 1px 1px #eaeaea;
+  border-top: 1px solid #eee;
   a {
     text-decoration: none;
   }
