--- a/views/_header.erb
+++ b/views/_header.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
   <%= erb :_settings %>
+  <%= erb :_my_url %>
   <div id="header">
       <h1><a id="logo" href="/<%= params[:key] %>" title="">Hatchpass</a></h1>
   </div>
