redirect to saved url

--- a/views/stylesheets/_base.scss
+++ b/views/stylesheets/_base.scss
@@ -1,6 +1,8 @@
 @import 'compass/reset';
 @import 'compass/css3';
 
+$blue: #4096EE;
+
 @mixin neue {
   font-family: "helvetica neue", Helvetica, arial, sans-serif;
 }
