--- a/views/stylesheets/_core.scss
+++ b/views/stylesheets/_core.scss
@@ -25,7 +25,7 @@ body {
 }
 
 a {
-  color: #4096EE;
+  color: $blue;
   img {
     border: 0; 
   } 
@@ -34,7 +34,6 @@ a {
 #header {
   position: absolute;
   bottom: 0;
-  padding: 10px 0;
   width: 100%;
   z-index: 6;
   @include linear-gradient(color-stops(#ddd, #aaa));
@@ -49,7 +48,12 @@ a {
     padding: 0 30px;
     font-size: 18px;
     a {
+      padding: 10px 0;
       color: black;
+      @include inline-block;
+      &:hover {
+        color: $blue;
+      }
     }
   }
 }
