fixed bugs in the kb shortcuts

--- a/views/_my_url.erb
+++ b/views/_my_url.erb
@@ -1,5 +1,7 @@
 <div class="panel my_url">
-  <h1 class="my-url"></h1>
+  <h1 class="message">
+    Saved
+  </h1>
     
   <ul class="individual">
     <li><a target="_blank" href="" id="saveUrl" class="">Save current URL</a></li>
