--- a/views/_header.erb
+++ b/views/_header.erb
@@ -10,5 +10,8 @@
   <%= erb :_settings %>
   <%= erb :_my_url %>
   <div id="header">
-      <h1><a id="logo" href="/<%= params[:key] %>" title="">Hatchpass</a></h1>
+      <h1><a id="logo" href="/" title="">Hatchpass</a></h1>
+      <nav>
+        <a href="#">About</a>
+      </nav>
   </div>
