--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
 <%= erb :_header %>
 <section id="main">
   <nav id="nav">
-    <a class="button" title="My url" id="my_url" href="#my_url">My Url</a>
-    <a class="button" title="Settings" id="my_settings" href="#settings">Settings</a>
+    <a class="nav-button" title="My url" id="my_url" href="#my_url">My Url</a>
+    <a class="nav-button" title="Settings" id="my_settings" href="#settings">Settings</a>
   </nav>
   <form method="post" action="/<%= params[:key] %>" id="hatch">
     <ul>
