--- a/views/stylesheets/_core.scss
+++ b/views/stylesheets/_core.scss
@@ -37,19 +37,35 @@ a {
   text-shadow: 0 1px 1px #eaeaea;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #777;
+  margin-bottom: 40px;
+  @include clearfix;
   a {
     text-decoration: none;
+    color: black;
   }
   h1 {
     font-weight: bold;
     padding: 0 30px;
     font-size: 18px;
+    float: left;
     a {
       padding: 10px 0;
       color: black;
       @include inline-block;
-      &:hover {
-        color: $blue;
+    }
+  }
+  nav{
+    float: left;
+    margin-top: 5px;
+    a {
+      padding: 6px 11px;
+      @include inline-block;
+      &:hover{
+        @include box-shadow(#555, 0, 0, 3px, 0, inset);
+        //@include linear-gradient(color-stops(#aaa, #ddd));
+        background: #ddd;
+        border-bottom: 1px solid #bbb;
+        @include border-radius(3px);
       }
     }
   }
@@ -78,7 +94,7 @@ a {
     z-index: 2;
     position: absolute;
     right: 0px;
-    .button {
+    .nav-button {
       @include border-radius(2px);
       width: 32px;
       height: 32px;
