better key management

--- a/views/_my_url.erb
+++ b/views/_my_url.erb
@@ -1,9 +1,12 @@
 <div class="panel my_url">
-  <h1 class="message">
+  <section id="my_key">
+    <div class="message">
+
+    </div>
+    <nav>
+      <a class="button " href="#new_key" id="new_key" >New Key</a>
+      <a class="button action" href="#save_key" id="save_key">Save Key</a>
+    </nav>
     
-  </h1>
-    
-  <ul class="individual">
-    <li><a target="_blank" href="" id="saveUrl" class="">Save current URL</a></li>
-  </ul>
+  </section>    
 </div>
