--- a/views/_help.erb
+++ b/views/_help.erb
@@ -7,10 +7,10 @@
       <td>Esc</td><td>Blur/Focus Inputs</td>
     </tr>
     <tr>
-      <td>s</td><td>Settings</td>
+      <td>j</td><td>Settings</td>
     </tr>
     <tr>
-      <td>u</td><td>My Url</td>
+      <td>k</td><td>My Key</td>
     </tr>
     <tr>
       <td>m</td><td>Focus master</td>
