--- a/views/layouts/layout.erb
+++ b/views/layouts/layout.erb
@@ -3,8 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Hatchpass</title>
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
   <link rel="icon" type="image/png" href="/images/favicon.png">	
   <link rel="stylesheet" href="/stylesheets/screen.css">
+  <% if iphone_user_agent? %>
+    <link rel="stylesheet" href="/stylesheets/mobile.css">  
+  <% end %>
 </head>
 <body>
   <%= erb :_settings %>
