formatted web app

--- a/views/_javascripts.erb
+++ b/views/_javascripts.erb
@@ -1,3 +1,4 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+<script src="/js/helper.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/events.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/hatchpass.js" type="text/javascript" charset="utf-8"></script>
