--- a/views/index.erb
+++ b/views/index.erb
@@ -23,7 +23,7 @@
       </li>
     </ul>
   </form>
-  <% unless iphone_user_agent? %>
+  <% unless mobile? %>
     <small id="tagline"><strong>Esc</strong> + <strong>h</strong> to see shortcuts</small>
   <% end %>
 </section>
