--- a/views/layouts/layout.erb
+++ b/views/layouts/layout.erb
@@ -23,7 +23,7 @@
   
   <link rel="icon" type="image/png" href="/images/favicon.png">	
   <link rel="stylesheet" href="/stylesheets/screen.css">
-  <% if iphone_user_agent? %>
+  <% if mobile? %>
     <link rel="stylesheet" href="/stylesheets/mobile.css">  
   <% end %>
 </head>
