--- a/views/_javascripts.erb
+++ b/views/_javascripts.erb
@@ -1,4 +1,6 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+<% if mobile? %>
 <script src="/js/helper.js" type="text/javascript" charset="utf-8"></script>
+<% end %>
 <script src="/js/events.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/hatchpass.js" type="text/javascript" charset="utf-8"></script>
