settings update form

--- a/views/_settings.erb
+++ b/views/_settings.erb
@@ -1,5 +1,5 @@
 <div class="panel settings">
-  <form method="post" id="settings">    
+  <div id="settings">    
   	<h2>Variation</h2>
   	<ul>
   	  <li><label for="symbols">Symbols</label> <span class="toggle"><input id="symbols" type="checkbox" /></span></li>
@@ -30,5 +30,5 @@
       </p>
       <p>Version 2.1b</p>
     </div>
-  </form>
+  </div>
 </div>
