removed algorithm dropdown in settings

--- a/views/_settings.erb
+++ b/views/_settings.erb
@@ -7,16 +7,16 @@
   	  <li><label>Length</label> <input type="text" name="length" placeholder="Length" value="" id="length" ></li>
   	</ul>
   	
-  	<h2>Algorithm</h2>
-  	<ul class="rounded">
-  	  <li>
-  	    <label for="algorithm">Algorithm</label>
-  	    <select name="algorithm" id="algorithm">
-  	      <option value="default">Default</option>
-  	      <option value="legacy">Legacy</option>
-  	    </select>
-  	  </li>
-  	</ul>
+  	<!-- <h2>Algorithm</h2>
+  	   <ul class="rounded">
+  	     <li>
+  	       <label for="algorithm">Algorithm</label>
+  	       <select name="algorithm" id="algorithm">
+  	         <option value="default">Default</option>
+  	         <option value="legacy">Legacy</option>
+  	       </select>
+  	     </li>
+  	   </ul> -->
   	
   	<h2>Remember</h2>
   	<ul class="rounded last">
