updated help screen

--- a/views/stylesheets/_core.scss
+++ b/views/stylesheets/_core.scss
@@ -293,8 +293,8 @@ input#secure {
     margin: 0;
     border-bottom: 1px dotted #efefef; }
   td {
-    color: #bbb;
+    color: #efefef;
     padding: 10px;
     &:first-child {
       font-weight: bold;
-      color: #efefef; } } }
+      color: #cebb26; } } }
