--- a/views/layouts/layout.erb
+++ b/views/layouts/layout.erb
@@ -31,11 +31,13 @@
   <div id="header">
       <h1><a id="logo" href="/" title="">Hatchpass</a></h1>
       <nav>
-        <a href="#">About</a>
+        <a id="aboutproject" href="#about">About</a>
       </nav>
   </div>
-
+  <%= erb :about %>
+  
   <%= yield %>
+  
   <% unless mobile? %>
     <%= erb :_help %>
   <% end %>
