--- a/views/stylesheets/screen.scss
+++ b/views/stylesheets/screen.scss
@@ -5,13 +5,15 @@
 
 #about {
   position: absolute;
-  bottom: 25px;
+  top: 28px;
   width: 100%;
   display: none;
+  z-index: 12;
+  line-height: 20px;
   .container {
     margin: 0 auto;
     padding: 20px;
-    width: 60%;
+    width: 40%;
     background: white;
     @include box-shadow(#888, 0, 0, 5px);
     line-height: 20px; } }
