settings ui tweaks

--- a/views/_settings.erb
+++ b/views/_settings.erb
@@ -4,7 +4,7 @@
   	<ul>
   	  <li><label for="symbols">Symbols</label> <span class="toggle"><input id="symbols" type="checkbox" /></span></li>
   	  <li><label for="caps">Uppercase Letters</label> <span class="toggle"><input id="caps" type="checkbox" /></span></li>
-  	  <li><label>Length</label> <input type="text" name="length" placeholder="Length" value="" id="length" ></li>
+  	  <li><label for="length">Length</label> <input type="text" name="length" placeholder="Length" value="" id="length" ></li>
   	</ul>
   	
   	<!-- <h2>Algorithm</h2>
