--- a/views/stylesheets/_core.scss
+++ b/views/stylesheets/_core.scss
@@ -226,10 +226,17 @@ input#secure {
     margin: 3px 0;
     &[type="text"] {
       width: 50px;
-      border: 2px solid #666;
+      border: none;
+      background: transparent;
+      border-bottom: 1px solid #666;
       outline: 0;
       text-align: right;
-      padding: 2px; } }
+      color: white;
+      padding: 2px; 
+      font-weight: bold;
+      font-size: 14px;
+    } 
+  }
   li {
     margin: 5px 0; }
   h2 {
