--- a/views/stylesheets/mobile.scss
+++ b/views/stylesheets/mobile.scss
@@ -2,7 +2,7 @@
   width: auto;
   margin: 20px auto;
   #nav {
-    z-index: 2;
+    z-index: 15;
     position: absolute;
     top: -62px;
     margin: 5px 15px;
@@ -10,5 +10,32 @@
       margin-left: 8px;
       float: right;
     }
+  }
+}
+#about {
+  .container {
+    width: 80%;
+  } 
+}
+
+.panel {
+  font-size: 18px;
+  #settings {
+    max-width: 345px;
+    ul {
+      width: 100%;
+      li {
+        margin: 10px 0;
+        label {
+          font-weight: bold;
+        }
+        input{
+           &[type="text"] {
+             padding: 5px;
+             font-size: 16px;
+           }
+        }
+      }
+    } 
   }
 }
