fixed typo in about

--- a/views/about.erb
+++ b/views/about.erb
@@ -6,7 +6,7 @@
     
     <p>This password is unique to you. See that ID in the address bar? That's yours. It influences the creation of your passwords. No one else can have the same one, even if they use the same master + domain combo.</p>
     
-    <p>You may want to remember or write down the ID in your url. You and you won't be able to get the same passwords without it.</p>
+    <p>You may want to remember or write down the ID in your url; you won't be able to get the same passwords without it.</p>
     
   </div>
 </div>
