--- a/views/layouts/layout.erb
+++ b/views/layouts/layout.erb
@@ -20,7 +20,7 @@
   
     <!--iOS web app -->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-startup-image" href="/images/splash.png">
+    <link rel="apple-touch-startup-image" href="/images/splash.jpg">
     <link rel="stylesheet" href="/stylesheets/mobile.css">  
   <% end %>
 </head>
