settings ui concept

--- a/views/_javascripts.erb
+++ b/views/_javascripts.erb
@@ -1,4 +1,5 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
 <% if mobile? %>
 <script src="/js/helper.js" type="text/javascript" charset="utf-8"></script>
 <% end %>
