--- a/views/layouts/layout.erb
+++ b/views/layouts/layout.erb
@@ -6,6 +6,7 @@
   <meta http-equiv="cleartype" content="on">
   
   <link rel="icon" type="image/png" href="/images/favicon.png">	
+  <!-- <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/smoothness/jquery-ui.css"> -->
   <link rel="stylesheet" href="/stylesheets/screen.css">
   <% if mobile? %>  
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
