moderinizr and localstorage check

--- a/views/_javascripts.erb
+++ b/views/_javascripts.erb
@@ -1,5 +1,6 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+<script src="/js/modernizr-1.7.min.js" type="text/javascript" charset="utf-8"></script>
 <% if mobile? %>
 <script src="/js/helper.js" type="text/javascript" charset="utf-8"></script>
 <% end %>
