--- a/views/_javascripts.erb
+++ b/views/_javascripts.erb
@@ -1,7 +1,24 @@
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 <% if mobile? %>
-<script src="/js/helper.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/js/helper.js" type="text/javascript" charset="utf-8"></script>
+  <script src="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.js"></script>
+<% else %>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 <% end %>
+
 <script src="/js/events.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/hatchpass.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/demo.js" type="text/javascript" charset="utf-8"></script>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-20072687-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
