--- a/views/_javascripts.erb
+++ b/views/_javascripts.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <script src="/js/events.js" type="text/javascript" charset="utf-8"></script>
-<script src="/js/hatchpass.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/application.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/demo.js" type="text/javascript" charset="utf-8"></script>
 
 <script type="text/javascript">
