new settings ui

--- a/views/_javascripts.erb
+++ b/views/_javascripts.erb
@@ -1,13 +1,11 @@
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 <% if mobile? %>
+  <!-- <script src="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.js"></script>  -->
   <script src="/js/helper.js" type="text/javascript" charset="utf-8"></script>
-  <script src="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.js"></script>
-<% else %>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 <% end %>
 
 <script src="/js/events.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/application.js" type="text/javascript" charset="utf-8"></script>
-<script src="/js/demo.js" type="text/javascript" charset="utf-8"></script>
 
 <script type="text/javascript">
 
