--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<section id="main">
+<section id="main" data-role="content">
   <nav id="nav">
     <a class="nav-button" title="My url" id="my_url" href="#my_url">My Url</a>
     <a class="nav-button" title="Settings" id="my_settings" href="#settings">Settings</a>
