--- a/views/_settings.erb
+++ b/views/_settings.erb
@@ -2,9 +2,22 @@
   <div id="settings">    
   	<h2>Variation</h2>
   	<ul>
-  	  <li><label for="symbols">Symbols</label> <span class="toggle"><input id="symbols" type="checkbox" /></span></li>
-  	  <li><label for="caps">Uppercase Letters</label> <span class="toggle"><input id="caps" type="checkbox" /></span></li>
-  	  <li><label for="length">Length</label> <input type="text" name="length" placeholder="Length" value="" id="length" ></li>
+  	  <li>
+  	    <label for="symbols">Symbols
+  	      <input id="symbols" type="checkbox" />
+  	    </label> 
+  	  </li>
+  	  <li>
+  	    <label for="caps">Uppercase Letters
+          <input id="caps" type="checkbox" />
+        </label> 
+      </li>
+  	  <li>
+  	    <label for="length">Length
+  	      <span class="range-val"></span>
+          <input type="range" name="length" id="length" value="10" min="1" max="30">
+  	    </label> 
+  	  </li>
   	</ul>
   	
   	<!-- <h2>Algorithm</h2>
@@ -20,8 +33,13 @@
   	
   	<h2>Remember</h2>
   	<ul class="rounded last">
-  	  <li><label for="r_master">Remember master</label> <span class="toggle"><input id="r_master" type="checkbox"/></span></li>
-  	  <li><label for="r_settings">Remember settings</label> <span class="toggle"><input id="r_settings" type="checkbox" /></span></li>
+      <!-- <li><label for="r_master">Remember master</label> <span class="toggle"><input id="r_master" type="checkbox"/></span></li> -->
+      <!-- <li><label for="r_settings">Remember settings</label> <span class="toggle"><input id="r_settings" type="checkbox" /></span></li> -->
+      <li>
+        <label for="remember">Remember Me
+          <input id="remember" type="checkbox"/>
+        </label> 
+      </li>
   	</ul>
   	
   	<div class="info">
