--- a/views/_help.erb
+++ b/views/_help.erb
@@ -1,25 +1,22 @@
 <div id="help">
   <table>
-    <tr class="title">
-      <th colspan="2">Shortcuts</th>
+    <tr>
+      <td><span class="kb">Esc</span></td><td>Blur/Focus Inputs</td>
     </tr>
     <tr>
-      <td>Esc</td><td>Blur/Focus Inputs</td>
+      <td><span class="kb">j</span></td><td>Settings</td>
     </tr>
     <tr>
-      <td>j</td><td>Settings</td>
+      <td><span class="kb">k</span></td><td>My Key</td>
     </tr>
     <tr>
-      <td>k</td><td>My Key</td>
+      <td><span class="kb">m</span></td><td>Focus master</td>
     </tr>
     <tr>
-      <td>m</td><td>Focus master</td>
+      <td><span class="kb">d</span></td><td>Focus domain</td>
     </tr>
     <tr>
-      <td>d</td><td>Focus domain</td>
-    </tr>
-    <tr>
-      <td>h or /</td><td>Help</td>
+      <td><span class="kb">h</span> or <span class="kb">/</span></td><td>Help</td>
     </tr>
   </table>
 </div><!-- #help -->
