--- a/views/index.erb
+++ b/views/index.erb
@@ -24,6 +24,6 @@
     </ul>
   </form>
   <% unless mobile? %>
-    <small id="tagline"><strong>Esc</strong> + <strong>h</strong> to see shortcuts</small>
+    <a href="#" id="tagline"><strong class="kb">Esc</strong> <strong class="kb">h</strong> to see shortcuts</a>
   <% end %>
 </section>
