new remember logic

--- a/views/_javascripts.erb
+++ b/views/_javascripts.erb
@@ -4,8 +4,8 @@
   <script src="/js/helper.js" type="text/javascript" charset="utf-8"></script>
 <% end %>
 
-<script src="/js/events.js" type="text/javascript" charset="utf-8"></script>
-<script src="/js/application.js" type="text/javascript" charset="utf-8"></script>
+<script src="<%= versioned_javascript('events') %>" type="text/javascript" charset="utf-8"></script>
+<script src="<%= versioned_javascript('application') %>" type="text/javascript" charset="utf-8"></script>
 
 <script type="text/javascript">
 
