--- a/views/_settings.erb
+++ b/views/_settings.erb
@@ -15,7 +15,7 @@
   	  <li>
   	    <label for="length">Length
   	      <span class="range-val"></span>
-          <input type="range" name="length" id="length" value="10" min="1" max="30">
+          <input type="range" name="length" id="length" value="" min="1" max="30">
   	    </label> 
   	  </li>
   	</ul>
@@ -39,6 +39,9 @@
         <label for="remember">Remember Me
           <input id="remember" type="checkbox"/>
         </label> 
+        <p class="hint">
+          Disabling removes all saved data including settings and master password.
+        </p>
       </li>
   	</ul>
   	
