fixed About page added license and readme

--- a/views/index.erb
+++ b/views/index.erb
@@ -27,3 +27,8 @@
     <a href="#" id="tagline"><strong class="kb">Esc</strong> <strong class="kb">h</strong> to see shortcuts</a>
   <% end %>
 </section>
+
+<% unless mobile? %>
+  <%= erb :_help %>
+<% end %>
+<%= erb :_javascripts %>
