--- a/views/about.erb
+++ b/views/about.erb
@@ -4,9 +4,16 @@
     <p><strong>Create strong, unique passwords for your online accounts. Don't remember any of them.</strong></p>
     <p>This app combines your master password with the domain (and some other data) to create a really kick ass password. Every time you type that combination, you'll get the same password.</p>
     
-    <p>This password is unique to you. See that ID in the address bar? That's yours. It influences the creation of your passwords. No one else can have the same one, even if they use the same master + domain combo.</p>
+    <p>This password is unique to you. A special key is assigned to you when you visit the first time. It influences the creation of your passwords. No one else can have the same passwords, even if they use the same master + domain combination.</p>
     
-    <p>You may want to remember or write down the ID in your url; you won't be able to get the same passwords without it.</p>
+    <p>You may want to remember or write down the key in your url; you won't be able to get the same passwords without it.</p>
+    
+    <p>
+      <strong>But where is my data stored?</strong>
+    </p>
+    <p>
+      Hatchpass uses localStorage to save all your settings. No data is stored on the server. For this reason, your settings will not persist between browsers or machines.
+    </p>
     
   </div>
 </div>
