moved help to a footer bar

--- a/views/_help.erb
+++ b/views/_help.erb
@@ -1,22 +1,10 @@
-<div id="help">
-  <table>
-    <tr>
-      <td><span class="kb">Esc</span></td><td>Blur/Focus Inputs</td>
-    </tr>
-    <tr>
-      <td><span class="kb">j</span></td><td>Settings</td>
-    </tr>
-    <tr>
-      <td><span class="kb">k</span></td><td>My Key</td>
-    </tr>
-    <tr>
-      <td><span class="kb">m</span></td><td>Focus master</td>
-    </tr>
-    <tr>
-      <td><span class="kb">d</span></td><td>Focus domain</td>
-    </tr>
-    <tr>
-      <td><span class="kb">h</span> or <span class="kb">/</span></td><td>Help</td>
-    </tr>
-  </table>
+<div id="help" class="close" title="Click to hide">
+  <ul>
+    <li><span class="kb">Esc</span> Blur/Focus Inputs</li>
+    <li><span class="kb">j</span> Settings</li>
+    <li><span class="kb">k</span> My Key</li>
+    <li><span class="kb">m</span> Focus master</li>
+    <li><span class="kb">d</span> Focus domain</li>
+    <li><span class="kb">h</span> or <span class="kb">/</span> Help</li>
+  </ul>    
 </div><!-- #help -->
