--- a/views/_javascripts.erb
+++ b/views/_javascripts.erb
@@ -1,4 +1,4 @@
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 <% if mobile? %>
   <!-- <script src="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.js"></script>  -->
   <script src="/js/helper.js" type="text/javascript" charset="utf-8"></script>
